exports[`fetchDepartures actions should handle RECEIVE_DEPARTURES action with beacons disabled 1`] = `
Array [
  Object {
    "isFetching": true,
    "latitude": 60.203978,
    "longitude": 24.9633573,
    "type": "REQUEST_DEPARTURES",
  },
  Object {
    "departures": Array [
      Object {
        "stop": Object {
          "schedule": Array [
            Object {
              "arrival": 7,
              "destination": "Rautatientori",
              "line": "55",
              "route_id": "HSL:1055",
              "trip_id": "HSL:1055_20161003_La_2_1412",
              "vehicle_type": 3,
            },
            Object {
              "arrival": 21,
              "destination": "Rautatientori",
              "line": "55",
              "route_id": "HSL:1055",
              "trip_id": "HSL:1055_20161003_La_2_1427",
              "vehicle_type": 3,
            },
          ],
          "stop_code": "3597",
          "stop_name": "A.I. Virtasen aukio",
        },
      },
    ],
    "error": false,
    "isFetching": false,
    "isReady": true,
    "type": "RECEIVE_DEPARTURES",
  },
]
`;

exports[`fetchDepartures actions should handle RECEIVE_DEPARTURES action with beacons enabled 1`] = `
Array [
  Object {
    "isFetching": true,
    "major": 60.203978,
    "minor": 24.9633573,
    "type": "REQUEST_DEPARTURES",
  },
  Object {
    "departures": Array [
      Object {
        "stop": Object {
          "schedule": Array [
            Object {
              "arrival": 7,
              "destination": "Rautatientori",
              "line": "55",
              "route_id": "HSL:1055",
              "trip_id": "HSL:1055_20161003_La_2_1412",
              "vehicle_type": 3,
            },
            Object {
              "arrival": 21,
              "destination": "Rautatientori",
              "line": "55",
              "route_id": "HSL:1055",
              "trip_id": "HSL:1055_20161003_La_2_1427",
              "vehicle_type": 3,
            },
          ],
          "stop_code": "3597",
          "stop_name": "A.I. Virtasen aukio",
        },
      },
    ],
    "error": false,
    "isFetching": false,
    "isReady": true,
    "type": "RECEIVE_DEPARTURES",
  },
]
`;

exports[`fetchDepartures actions should handle REQUEST_ERROR action 1`] = `
Object {
  "error": true,
  "type": "REQUEST_ERROR",
}
`;
